# mnpolarity

./: .gitignore  README.md  main.py  requirements.txt  setup.cfg  setup.py  train_simplest.py
.github/workflows/: main.yml  publish_new.sh
configs/: main.yml
data/: negative_emojis.txt  negative_phrases.txt  negative_words.txt
mnpolarity/: config.py  models.py  twint_helper.py  utils.py
mnpolarity/labeling_functions/: __init__.py
output/1621912006.721575/: pseudo_label.csv  sklearn_model.pkl  snorkel_label_model.pkl
src/: __init__.py  classes.py  config.py  utils.py
src/labeling_functions/: __init__.py  custom_lfs.py
src/mnpolarity/: config.py  models.py  twint_helper.py  utils.py
src/mnpolarity/labeling_functions/: make_keyword.py
tests/: config.py  labeling_functions.py  models.py  test_config.py  test_labeling_functions.py  test_models.py  test_twint.py  twint.py
